apps/demo-app-kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
  labels:
    app: demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
        - name: demo-app
          image: quay.io/openshift/origin-hello-openshift:4.15
          ports:
            - containerPort: 8080
              protocol: TCP
