apps/demo-app-kustomize/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: demo-app
spec:
  to:
    kind: Service
    name: demo-app
  port:
    targetPort: http
